Add MongoDB and GraphQL resource

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>lotl-marketplace-service - 1.0.0-SNAPSHOT</title>
+    <title>lotl-marketplace - 1.0.0-SNAPSHOT</title>
     <style>
         h1, h2, h3, h4, h5, h6 {
             margin-bottom: 0.5rem;
@@ -145,7 +145,7 @@ This codestart implements a simple gRPC service that can be tested in the <a hre
             <h3>Application</h3>
             <ul>
                 <li>GroupId: <code>lords.land</code></li>
-                <li>ArtifactId: <code>lotl-marketplace-service</code></li>
+                <li>ArtifactId: <code>lotl-marketplace</code></li>
                 <li>Version: <code>1.0.0-SNAPSHOT</code></li>
                 <li>Quarkus Version: <code>2.3.0.Final</code></li>
             </ul>
